Roundcube Webmail ContextMenu
=============================

 * rename default skin to classic (c40419bdfe)
 * rcube_ui > rcube_utils (r6091)
 * Update for Roundcube framework

Version 1.9 (2012-04-14, rc-0.8)
=================================================
 * Update after r5781
 * Add inital support for Larry

Version 1.8 (2011-05-14, rc-0.8)
=================================================
 * Fix readfolder method after r5557
 * Use new labels for group delete/rename (r4864)
 * Add forward-attachment function (r4761)

Version 1.7 (2011-10-01, rc-0.5)
=================================================
 * Add reply-list function (r4032)

Version 1.6 (2010-08-01, rc-0.4)
=================================================
 * Fix error in deleteing after moving using context menu
 * Update hooks (r3840)

Version 1.5 (2010-05-29, rc-0.4)
=================================================
 * Hide menu after click in iframes
 * Update contact copying after r3694
 * Update hooks after r3685

Version 1.4 (2010-03-30, rc-0.4)
=================================================
 * Update after r3614
 * Update jquery.ContextMenu to 1.01
 * Use new imap->search_once function (r3446)
 * Add initial support for contact groups in address book
 * Fix mark all as read function
 * Update to r3393
 * Fix folder count with nested folders

Version 1.3 (2010-02-07, rc-0.4)
=================================================
 * Update after r3258
 * CSS update after r3141
 * Use local_skin_path() (rev 3076)
 * Added address book context menu (requires r3023)

Version 1.2 (2009-09-18, rc-0.3)
=================================================
 * Fix folder menu for UTF8 folders
 * Use rcmail_send_unread_count (r2960)
 * Add 'move to' to message list menu

Version 1.1 (2009-09-11, rc-0.3)
=================================================
 * Added folder list context menu
 * Moved menu generation from JS to PHP
 * Added support for sub menus
 * Added new "edit" action