@@ -1,7 +1,8 @@
 Roundcube Webmail ContextMenu
 =============================
 
- * rename default skin to classic (c40419bdfe)
+ * Add remove selected contacts from group option
+ * Rename default skin to classic (c40419bdfe)
  * rcube_ui > rcube_utils (r6091)
  * Update for Roundcube framework
 
